# choptimize-poc

./: .gitignore  README.md  pyproject.toml  task
src/choptimize/: __main__.py  cli.py  types.py
src/choptimize/analysis/: __init__.py  analyzer.py  criteria.py
src/choptimize/api/: __init__.py  gemini_client.py
src/choptimize/display/: __init__.py  arg_parser.py  handles.py  output.py  theme.py  types.py
